--- a/Project READMEs Frontend/9. Deployment.md
+++ b/Project READMEs Frontend/9. Deployment.md
@@ -58,7 +58,7 @@ If we want to use the latest version, we have to change the Switch by Routes, an
 <Route path="/" element={<Home />} />
 ```
 
-Since the index.js, which was created with the ``npm create-react-app`` command, has a Hash router:
+Since the index.js, which was created with the ``npx create-react-app`` command, has a Hash router:
 
 ```
 import React from 'react';
@@ -87,9 +87,15 @@ The site has an error. We need to remove the Router from the App.file, as well a
 import { Routes, Route } from "react-router-dom";
 ```
 
-Also we need to change all the router-dom/something to just react-router-dom.
+Also we need to change all the router-dom/something dependencies to just react-router-dom.
 
 The start command also changes from ``npm run start`` to ``npm start``, it's found in the **package.json**.
+
+The scripts go like this now:
+```
+"predeploy": "npm run build",
+"deploy": "gh-pages -d build",
+```
 
 We'll also have to re-install Font Awesome: ``npm install @fortawesome/fontawesome-svg-core @fortawesome/free-solid-svg-icons @fortawesome/react-fontawesome``. And primereact: ``npm install primereact``, axios as well ``npm i axios``, and react-router-dom: ``npm i react-router-dom``.
 
@@ -118,3 +124,5 @@ setInterval(reloadWebsite, interval);
 ## Final touches
 
 Erase the localhost url in the backend and put, as an origin, your github page.
+
+Install sass to avoid errors during deployment: ``npm install sass``
