fixed repo name not appearing

--- a/Project READMEs Frontend/9. Deployment.md
+++ b/Project READMEs Frontend/9. Deployment.md
@@ -153,6 +153,12 @@ Now, create a 404.html page that redirects all requests to the index.html, where
 </html>
 ```
 
+However, this will cause the page to render without the repo name. To fix this, go to the **index.js** file and pass the repo name to the BrowserRouter:
+
+```
+<BrowserRouter basename="/Home-of-Imagination">
+```
+
 Install react-scripts ``npm install react-scripts --save``.
 
 Push the changes and deploy.
