--- a/Project READMEs Frontend/9. Deployment.md
+++ b/Project READMEs Frontend/9. Deployment.md
@@ -159,6 +159,8 @@ However, this will cause the page to render without the repo name. To fix this, 
 <BrowserRouter basename="/Home-of-Imagination">
 ```
 
+### If this keeps throwing issues, here's the solution I came up with: revert BrowserRouter back to HashRouter, and put a # in the API routes and/or the homepage line in the package.json.
+
 Install react-scripts ``npm install react-scripts --save``.
 
 Push the changes and deploy.
