small changes in readmes

--- a/Project READMEs Frontend/9. Deployment.md
+++ b/Project READMEs Frontend/9. Deployment.md
@@ -159,7 +159,11 @@ However, this will cause the page to render without the repo name. To fix this, 
 <BrowserRouter basename="/Home-of-Imagination">
 ```
 
-### If this keeps throwing issues, here's the solution I came up with: revert BrowserRouter back to HashRouter, and put a # in the API routes and/or the homepage line in the package.json.
+### If this keeps throwing issues, here's the solution I came up with: revert BrowserRouter back to HashRouter, and put a # in the homepage line in the package.json.
+
+```
+"homepage": "https://garaziLS.github.io/Home-of-Imagination/#",
+```
 
 Install react-scripts ``npm install react-scripts --save``.
 
