fixed tables not appearing

--- a/Project READMEs Frontend/3.1 APIs, states & GenData (core function).md
+++ b/Project READMEs Frontend/3.1 APIs, states & GenData (core function).md
@@ -37,7 +37,31 @@ And now will call the API endpoint to get a single item, populate the state, and
     }
 ```
 
-Then, we render the content and call GenData, the component that stores raw data. This component will hold all the logic for the randomizing function because it holds the prop of the splitting of the item-content string and converts it into an array, which is needed for the randomizer functionality.
+> Note: We changed the react boilerplate and React doesn't use props.match. If you're using React Router v6, the way to access route parameters has changed, and props.match no longer exists. Instead, you should use the useParams hook for functional components or pass the route parameters explicitly as props.
+```
+componentDidMount() {
+        this.getTable(this.props.slug);
+    }
+```
+
+But the useParams is a hook used in functional components, so we'll create a new file called **random-table-slug**.
+
+```
+import React from "react";
+import { useParams } from 'react-router-dom';
+import RandomTable from './random-table';  // Your class component
+
+const RandomTableWithSlug = (props) => {
+    const { slug } = useParams();
+    return <RandomTable {...props} slug={slug} />;
+};
+
+export default RandomTableWithSlug;
+```
+
+We're receiving slug as a prop, so we'll call this functional component in the **app.js** file. ``<Route path="/tables/:slug" element={<RandomTableSlug />} />``.
+
+Once this is done, we render the content and call GenData, the component that stores raw data. This component will hold all the logic for the randomizing function because it holds the prop of the splitting of the item-content string (stored in RandomTableContent) and converts it into an array, which is needed for the randomizer functionality.
 
 ```
   render() {
