debugging to see why the error happens

--- a/Project READMEs Frontend/3.1 APIs, states & GenData (core function).md
+++ b/Project READMEs Frontend/3.1 APIs, states & GenData (core function).md
@@ -22,7 +22,7 @@ And now will call the API endpoint to get a single item, populate the state, and
 
 ```
   getTable(item_id) {
-        axios.get("https://devcamp-capstone-backend-backup.onrender.com/tables/" + item_id)
+        axios.get("https://localhost:3000/tables/" + item_id)
             .then(response => {
                 this.setState({ RandomTableContent: response.data });
                 const { RandomTableContent } = this.state
@@ -111,7 +111,7 @@ getData() {
 We call axios, set state and split the content string into an array:
 
 ```
-axios.get(`https://devcamp-capstone-backend-backup.onrender.com/tables/${this.props.item_id}`)
+axios.get(`https://localhost:3000/tables/${this.props.item_id}`)
                 .then(response => {
                     const data = response.data;
                     const contentArray = data.item_content.split(","); // Split the item_content into an array
