--- a/Project READMEs Frontend/7. Search bar.md
+++ b/Project READMEs Frontend/7. Search bar.md
@@ -57,7 +57,7 @@ const SearchBar = () => {
     useEffect(() => {
         const getData = async () => {
             try {
-                const response = await axios.get("https://localhost:5000/tables")
+                const response = await axios.get("https://devcamp-capstone-backend-backup.onrender.com/tables")
                 setData(response.data);
                 setFilteredData(response.data);
             } catch (error) {
