--- a/Project READMEs Frontend/5.2. Delete items.md
+++ b/Project READMEs Frontend/5.2. Delete items.md
@@ -51,7 +51,7 @@ With this, we can now call axios:
 ```
  handleDeleteItem(item) {
         console.log("Deleting item with ID:", item.item_id);
-        axios.delete(`https://localhost:5000/tables/${item.item_id}`, { withCredentials: true })
+        axios.delete(`https://devcamp-capstone-backend-backup.onrender.com/tables/${item.item_id}`, { withCredentials: true })
             .then(response => {
                 console.log("delete response", response)
             })
