HOC login component added to avoid login error

--- a/Project READMEs Frontend/4.1- Auth Login.md
+++ b/Project READMEs Frontend/4.1- Auth Login.md
@@ -443,7 +443,7 @@ Now, for the method in the app.js file:
 
 ## Fixing error.request when logging in
 
-Since we changed to React v6 in order to upload content to GitHub pages, the props.history.push command doesn't work.
+Since we changed to React v6 in order to upload content to GitHub pages, the props.history.push command in the **login.js** component doesn't work, causing the login from the **login-component.js** file to fail.
 
 ```
 handleSuccessfulLoginAuth() {
@@ -454,4 +454,28 @@ handleSuccessfulLoginAuth() {
     }
 ```
 
-We have to change this to ``this.props.navigate``.
+We have to change this to ``this.props.navigate``. However, this is a hook (useNavigate is used), and hooks only work in functional components. We need to use a High Order Component to bypass this, so we'll create another file in the auth section: **login-helper**.
+
+```
+import { useNavigate } from 'react-router-dom';
+
+function LoginHelper(Component) {
+    return function(props) {
+        const navigate = useNavigate();
+        return <Component {...props} navigate={navigate} />;
+    };
+}
+
+export default LoginHelper;
+```
+
+> You do not need to import your component into the HOC (LoginHelper) itself. The idea behind a Higher-Order Component (HOC) is that it should be reusable with any component you pass to it, rather than being tied to a specific component.
+
+Now we'll import this into our component, and will wrap our component inside the HOC (we removed the export default class to put it at the bottom).
+
+```
+export default LoginHelper(Login);
+```
+
+Now we can change the ``props.history.push`` for ``this.props.navigate``.
+
