--- a/Project READMEs Frontend/4.1- Auth Login.md
+++ b/Project READMEs Frontend/4.1- Auth Login.md
@@ -459,10 +459,10 @@ We have to change this to ``this.props.navigate``. However, this is a hook (useN
 ```
 import { useNavigate } from 'react-router-dom';
 
-function LoginHelper(Component) {
+function LoginHelper(WrappedComponent) {
     return function(props) {
         const navigate = useNavigate();
-        return <Component {...props} navigate={navigate} />;
+        return <WrappedComponent {...props} navigate={navigate} />;
     };
 }
 
