converted login to functional component

--- a/Project READMEs Frontend/4.1- Auth Login.md
+++ b/Project READMEs Frontend/4.1- Auth Login.md
@@ -479,3 +479,35 @@ export default LoginHelper(Login);
 
 Now we can change the ``props.history.push`` for ``this.props.navigate``.
 
+## If this doesn't work, convert the login component into a class component, since classes can use hooks, and pass in the useNavigate function directly.
+
+```
+import React from 'react';
+import { useNavigate } from 'react-router-dom';
+import LoginComponent from '../project_components/Auth/login_component';
+
+const Login = (props) => {
+    const navigate = useNavigate(); // Get the navigate function
+
+    const handleSuccessfulLoginAuth = () => {
+        props.handleSuccessfulLogin();
+        navigate('/create'); // Use navigate here
+    };
+
+    const handleUnsuccessfulLoginAuth = () => {
+        props.handleUnsuccessfulLogin();
+    };
+
+    return (
+        <div>
+            <LoginComponent
+                handleSuccessfulLoginAuth={handleSuccessfulLoginAuth}
+                handleUnsuccessfulLoginAuth={handleUnsuccessfulLoginAuth}
+            />
+        </div>
+    );
+};
+
+export default Login;
+```
+
